--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=http://travelinv-java-backend:3100
+REACT_APP_API_BASE_URL=http://40.119.250.203:3100
 REACT_APP_API_BASE_URL_NODE=http://travelinv-node-backend:8800
